# IFRC-Admin-Aware-Analytics

./: go_ga_data_sample_30_v2.csv
go-api/: synthetic_ga_emergency_views.xlsx
go-api/api/: analytics.py  analytics_access.py  analytics_modules.py  serializers.py
go-api/main/: settings.py
go-web-app/: .dockerignore  .gitignore  .gitmodules  COLLABORATING.md  CONTRIBUTING.md  README.md  knip.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  typos.toml
go-web-app/.changeset/: angry-rings-shave.md  big-turkeys-travel.md  brown-banks-act.md  chilly-hoops-relax.md  clean-pans-know.md  fancy-feet-pick.md  few-buckets-obey.md  four-facts-glow.md  funky-grapes-jog.md  khaki-dolls-begin.md  late-hornets-strive.md  pre.json  shiny-sites-behave.md  slimy-carrots-send.md  tiny-ghosts-rule.md  tough-wombats-fall.md  twelve-ducks-glow.md  wet-eels-mix.md
go-web-app/go-risk-module-api/: Dockerfile  README.md  openapi-schema.yaml  pyproject.toml
go-web-app/go-risk-module-api/.github/workflows/: ci.yml  helm-publish.yml
go-web-app/go-risk-module-api/caddy/: Caddyfile
go-web-app/go-risk-module-api/common/: utils.py
go-web-app/go-risk-module-api/common/management/commands/: update_country_data.py
go-web-app/go-risk-module-api/helm/: .gitignore  Chart.yaml  values-test.yaml  values.yaml
go-web-app/go-risk-module-api/helm/templates/: _helpers.tpl
go-web-app/go-risk-module-api/helm/templates/api/: deployment.yaml  ingress.yaml  service.yaml  service_account.yaml
go-web-app/go-risk-module-api/helm/templates/config/: configmap.yaml  secret.yaml  secrets_provider_class.yaml
go-web-app/go-risk-module-api/helm/templates/cronjobs/: jobs.yaml
go-web-app/go-risk-module-api/imminent/management/commands/: import_gwis_data.py
go-web-app/go-risk-module-api/imminent/sources/: utils.py
go-web-app/go-risk-module-api/risk_module/: enums.py  settings.py
go-web-app/go-risk-module-api/scripts/: run_prod.sh
go-web-app/go-risk-module-api/seasonal/: INFORM_Risk_2025_v070.xlsx
go-web-app/go-risk-module-api/seasonal/management/commands/: aggregate_gwis_data.py  create_hazard_information.py  create_risk_score.py
go-web-app/go-risk-module-api/seasonal/scripts/: fetch_inform_data.py  fetch_inform_seasonal.py
(+956 files in other folders)
