[project]
name = "risk-module-server"
version = "0.1.0"
description = ""
authors = [{ name = "IFRC" }]
requires-python = "~=3.8.1"
license = { text = "AGPL-3.0-only" }
dependencies = [
    "celery[redis]==5.1.1",
    "djangorestframework-camel-case==1.2.0",
    "djangorestframework==3.12.4",
    "django-celery-beat==2.2.1",
    "django-cors-headers==3.7.0",
    "django-crispy-forms==1.12.0",
    "django-storages==1.11.1",
    "django-enumfield==2.0.2",
    "django-filter==2.4.0",
    "django-redis==5.0.0",
    "Django==3.2.17",
    "ipython",
    "factory-boy",
    "drf-writable-nested",
    "openpyxl==3.0.9",
    "psycopg2-binary",
    "pandas==1.3.4",
    "requests",
    "geopy==2.2.0",
    "gunicorn~=20.0.4",
    "boto3==1.20.33",
    "lxml==4.7.1",
    "Shapely==1.8.1.post1",
    "beautifulsoup4==4.11.1",
    "pyproj==3.3.1",
    "urllib3==1.26.12",
    "sentry-sdk>=2.7.1,<3",
    "django-environ>=0.9.0,<0.10",
    "drf-spectacular",
    "xlrd==1.2.0",
    "python-Levenshtein==0.21.1",
    "django-health-check",
    "psutil",
]

[dependency-groups]
dev = [
    "pytest-django",
    "django-stubs==4.2.6",
    "djangorestframework-stubs",
]

[tool.django-stubs]
django_settings_module = "main.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "risk_module.settings"
log_cli = true

[tool.pyright]
extraPaths = ["apps"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "apps/experimental",
    "apps/typestubs",
    "**/snap_test_*.py",
]
reportMissingImports = true
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"

[tool.black]
line-length = 130
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | \.db
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''
# NOTE: Update in .pre-commit-config.yaml as well
extend-exclude = "^.*\\b(migrations)\\b.*$ (__pycache__|.*snap_test_.*\\.py|.+/+.+/+migrations/+.*)"

[tool.isort]
profile = "black"
multi_line_output = 3
# NOTE: Update in .pre-commit-config.yaml as well
skip = [
    "**/__pycache__",
    "**/snap_test_*.py",
    ".venv/",
    "**/migrations/*.py",
]
